# ophys-mfish-dataset-catalog

./: .gitignore  README.md  pyproject.toml
mice/: 747667.json  749315.json  754803.json  755252.json  767018.json  767022.json  767108.json  782149.json  783551-v1.json  783552-01.json  783552-02.json  783884-01.json  783884-02.json  785054-v1.json  788406.json  788639-25.json  790322.json  795476-01.json  797321-01.json  800792.json  800993-01.json  800995.json  804363.json  837568-01.json  837568-02.json  single-cell-unmix-lav-smaller-nn.ipynb
schemas/: mouse.schema.json
src/ophys_mfish_dataset_catalog/: __init__.py
tools/: add_field.py  backfill.py  list_datasets.py  update_derived_assets.py  validate.py
