[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ophys-mfish-dataset-catalog"
version = "0.1.0"
description = "Metadata records for ophys-mFISH mice."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Allen Institute for Neural Dynamics" }
]
dependencies = [
  "jsonschema>=4.0"
]

[tool.setuptools]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ophys_mfish_dataset_catalog*"]
